# g-camera-pipeline

./: CMakeLists.txt  groups  project.config
camsrc/: CMakeLists.txt  gstcamsrc.c  gstcamsrc.h
files/: CMakeLists.txt
files/conf/: CMakeLists.txt  g-camera-pipeline.conf.in
files/sysbus/: com.webos.g-camera-pipeline.api.json  com.webos.g-camera-pipeline.groups.json  com.webos.g-camera-pipeline.perm.json  com.webos.g-camera-pipeline.role.json.in  com.webos.g-camera-pipeline.service.in  g-camera-pipeline.manifest.json.in
src/: CMakeLists.txt  main.cpp
src/base/: base.h  camera_types.h  message.h
src/bufferencoder/: CMakeLists.txt  buffer_encoder.cpp  buffer_encoder.h
src/camera-window-manager/: CMakeLists.txt  README.md
src/camera-window-manager/include/: camera_window_manager.h
src/camera-window-manager/src/: camera_window_manager.cpp  common.h  wayland_exporter.cpp  wayland_exporter.h  wayland_foreign.cpp  wayland_foreign.h  wayland_importer.cpp  wayland_importer.h  wayland_surface.cpp  wayland_surface.h
src/camera-window-manager/tests/: CMakeLists.txt
src/camera-window-manager/tests/camera-window-manager/: CMakeLists.txt  camera_window_manager_test.h  gtest_camera_window_manager.cpp
src/camera-window-manager/tests/fake/: api_call_checker.cpp  api_call_checker.h  wayland-client.cpp  wayland-client.h  wayland-cursor.h  wayland-egl.h  wayland-webos-foreign-client-protocol.h  wayland-webos-shell-client-protocol.h  wayland-webos-surface-group-client-protocol.h  wayland_foreign.cpp  wayland_importer.cpp  wayland_surface.cpp
src/camera-window-manager/tests/wayland_foreign/: CMakeLists.txt  gtest_wayland_foreign.cpp  wayland_foreign_test.h
src/camera-window-manager/tests/wayland_importer/: CMakeLists.txt  gtest_wayland_importer.cpp  wayland_importer_test.h
src/camera-window-manager/tests/wayland_surface/: CMakeLists.txt  gtest_wayland_surface.cpp  wayland_surface_test.h
src/camera-window-manager/tool/: CMakeLists.txt
src/camera-window-manager/tool/exporter/: CMakeLists.txt
src/camera-window-manager/tool/exporter/src/: main.cpp
src/camera-window-manager/tool/importer/: CMakeLists.txt
src/camera-window-manager/tool/importer/src/: main.cpp
src/cameraplayer/: CMakeLists.txt  camera_player.cpp  camera_player.h  camera_service_client.cpp  camera_service_client.h  gst_debug.conf  notification.h  signal_listener.cpp  signal_listener.h
src/cameraplayer/qemux86/: gst_debug.conf  gst_elements.conf
src/cameraplayer/raspberrypi/: gst_elements.conf
src/cameraplayer/raspberrypi4/: gst_debug.conf
src/cameraservice/: camera_service.cpp  camera_service.h
src/log/: log.cpp  log.h
src/mediaencoderclient/: CMakeLists.txt  media-encoder-client.pc  media_encoder_client.cpp  media_encoder_client.h
src/parser/: parser.cpp  parser.h  serializer.cpp  serializer.h
src/postProcess/: CMakeLists.txt  EmptySolution.cpp  EmptySolution.hpp  FaceDataManager.cpp  FaceDataManager.hpp  FacePtzSolution.cpp  FacePtzSolution.hpp  FpsCalc.cpp  FpsCalc.hpp  IPostProcessSolution.hpp  PTZMovingParam.cpp  PTZMovingParam.hpp  PostProcessSolution.cpp  PostProcessSolution.hpp  SmoothSlidingController.cpp  SmoothSlidingController.hpp  drawbox.cpp  drawbox.hpp  video_crop.cpp  video_crop.hpp
src/resourcefacilitator/: requestor.cpp  requestor.h
src/tests/: CMakeLists.txt  camshm.cpp  camshm.h  testCamera.cpp  testEncoder.cpp
src/util/: cam_posixshm.cpp  cam_posixshm.h  camshm.cpp  camshm.h
